--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <link rel="stylesheet" src="./styles/styles.css">
+    <link rel="shortcut icon" type="image/png" src="./images/logo.png">
+
     <title>InstantWeather - JS Project</title>
 </head>
 <body>
