ajout de la promesse

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <title>InstantWeather - JS Project</title>
 </head>
 <body>
-    
+    <div class="search-city-containers">
+        <labal>Recherche ta ville via Code Postale :</labal>
+        <input id="codePost" type="number" value="14123">
+        <button id="sendCodePost">Envoyer</button>
+    </div>
+    <p id="showCityName"></p>
+    <script src="./scripts/app.js"></script>
 </body>
 </html>
