ajout des villes a la liste

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <input id="codePost" type="number" value="14123">
         <button id="sendCodePost">Envoyer</button>
     </div>
-    <p id="showCityName"></p>
+    <select name="city" id="city-select">
+        <option value="">Choisissez une ville</option>
+    </select>
     <script src="./scripts/app.js"></script>
 </body>
 </html>
