liaison de l'api avec un menu select

--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Instant Weather - JS Project</title>
+    
+    <link rel="stylesheet" src="./styles/styles.css">
+    <link rel="shortcut icon" type="image/png" src="./images/logo.png">
+
+    <title>InstantWeather - JS Project</title>
 </head>
 <body>
-    
+    <div id="search-city-containers">
+        <label id="text-search-city">Recherche via Code Postal : </label>
+        <input id="codePost" type="text" placeholder="Entrez un code postal...">
+        <select id="city-select" name="city"></select>
+        <button id="search-weather-report">Recherche la météo pour cette ville</button>
+    </div>
+
+    <div id="display-weather-report-containers">
+        <p class="text-display-info">Température max : <span id="tmax"></span></p>
+        <p class="text-display-info">Température min : <span id="tmin"></span></p>
+        <p class="text-display-info">Probabilité de pluie : <span id="probarain"></span></p>
+        <p class="text-display-info">Soleil ajd : <span id="suntoday"></span></p>
+    </div>
+    <script src="./scripts/app.js"></script>
 </body>
 </html>
