--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" src="./styles/styles.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <link rel="shortcut icon" type="image/png" src="./images/logo.png">
 
     <title>InstantWeather - JS Project</title>
@@ -13,8 +13,7 @@
     <div id="search-city-containers">
         <label id="text-search-city">Recherche via Code Postal : </label>
         <input id="codePost" type="text" placeholder="Entrez un code postal...">
-        <select id="city-select" name="city"></select>
-        <button id="search-weather-report">Recherche la météo pour cette ville</button>
+        <div id="result"></div>
     </div>
 
     <div id="display-weather-report-containers">
