--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link rel="stylesheet" src="./styles/styles.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <link rel="shortcut icon" type="image/png" src="./images/logo.png">
+    <script src="https://kit.fontawesome.com/7cc3538ab6.js" crossorigin="anonymous"></script>
 
     <title>InstantWeather - JS Project</title>
 </head>
 <body>
     <div id="search-city-containers">
         <label id="text-search-city">Recherche via Code Postal : </label>
-        <input id="codePost" type="text" placeholder="Entrez un code postal...">
+        <input id="codePost" type="text" class="fa-solid fa-magnifying-glass" placeholder="">
         <select id="city-select" name="city"></select>
         <button id="search-weather-report">Recherche la météo pour cette ville</button>
     </div>
