--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
     <div id="search-city-containers">
         <label id="text-search-city">Recherche via Code Postal : </label>
-        <input id="codePost" type="text" class="fa-solid fa-magnifying-glass" placeholder="">
+    <div>
+        <input id="codePost" type="text" placeholder="Recherche via code postale...">
+    </div>
         <select id="city-select" name="city"></select>
         <button id="search-weather-report">Recherche la météo pour cette ville</button>
     </div>
