--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="shortcut icon" type="image/png" href="./images/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instant Weather | JavaScript Project</title>
 </head>
@@ -10,22 +11,22 @@
     <h1>Weather Dashbord</h1>
     <div class="container">
         <div class="weather-input">
-            <h3>Enter a City Name</h3>
-            <input id="zip-code-input" type="text" placeholder="Entrer un code postale">
+            <label name="zip-search">Enter a City Name</label>
+            <input id="zip-code-input" type="text" placeholder="Entrer un code postale" aria-label="zip-search" maxlength="5">
             <div id="result"></div>
         </div>
         <div class="weather-data">
             <div class="current-weather">
                 <div class="details">
                     <h2><span id="city-location">__</span> - <span id="actual-date"></span></h2>
-                    <h4>Temperature max: <span id="city-temperature-max">__</span>°C</h4>
-                    <h4>Temperature min: <span id="city-temperature-min">__</span>°C</h4>
-                    <h4>Rain probability: <span id="city-rain-probability">__</span>%</h4>
-                    <h4>Sun time: <span id="city-sun-time">__</span> hours</h4>
+                    <h3>Temperature max: <span id="city-temperature-max">__</span>°C</h3>
+                    <h3>Temperature min: <span id="city-temperature-min">__</span>°C</h3>
+                    <h3>Rain probability: <span id="city-rain-probability">__</span>%</h3>
+                    <h3>Sun time: <span id="city-sun-time">__</span> hours</h3>
                 </div>
                 <div class="icon">
                     <img src="https://openweathermap.org/img/wn/10d@4x.png" alt="weather-icon">
-                    <h4 id="weather-info-text"></h4>
+                    <h4 id="weather-info-text">_______________</h4>
                 </div>
             </div>
         </div>
