--- a/index.html
+++ b/index.html
@@ -18,16 +18,28 @@
         <div class="weather-data">
             <div class="current-weather">
                 <div class="details">
-                    <h2><span id="city-location">__</span> - <span id="actual-date"></span></h2>
+                    <h2><span id="city-location">______</span> - <span id="actual-date"></span></h2>
                     <h3>Temperature max: <span id="city-temperature-max">__</span>°C</h3>
                     <h3>Temperature min: <span id="city-temperature-min">__</span>°C</h3>
                     <h3>Rain probability: <span id="city-rain-probability">__</span>%</h3>
                     <h3>Sun time: <span id="city-sun-time">__</span> hours</h3>
+                    <h4>You want to display more day ?</h4>
                 </div>
                 <div class="icon">
                     <img src="https://openweathermap.org/img/wn/10d@4x.png" alt="weather-icon">
-                    <h4 id="weather-info-text">_______________</h4>
+                    <h4 id="weather-info-text">_____________</h4>
                 </div>
+            </div>
+            <div class="days-forecast">
+                <h2>1 - Day Forecast</h2>
+                <ul class="weather-cards">
+                  <li class="card">
+                    <h3><span id="actual-date2"></span></h3>
+                    <h4>Temp: __C</h4>
+                    <h4>Wind: __ M/S</h4>
+                    <h4>Humidity: __%</h4>
+                  </li>
+                </ul>
             </div>
         </div>
     </div>
