Création du DOM avec le JavaScript

--- a/index.html
+++ b/index.html
@@ -8,32 +8,7 @@
     <title>Instant Weather | JavaScript Project</title>
 </head>
 <body>
-    <h1>Weather Dashbord</h1>
-    <div class="container">
-        <div class="weather-input">
-            <label name="zip-search">Enter a City Name</label>
-            <input id="zip-code-input" type="text" placeholder="Entrer un code postale" aria-label="zip-search" maxlength="5">
-            <div id="result"></div>
-        </div>
-        <div class="weather-data">
-            <div class="current-weather">
-                <div class="details">
-                    <h2><span id="city-location">__</span> - <span id="actual-date"></span></h2>
-                    <h3>Temperature max: <span id="city-temperature-max">__</span>°C</h3>
-                    <h3>Temperature min: <span id="city-temperature-min">__</span>°C</h3>
-                    <h3>Rain probability: <span id="city-rain-probability">__</span>%</h3>
-                    <h3>Sun time: <span id="city-sun-time">__</span> hours</h3>
-                </div>
-                <div class="icon">
-                    <img src="https://openweathermap.org/img/wn/10d@4x.png" alt="weather-icon">
-                    <h4 id="weather-info-text">_______________</h4>
-                </div>
-            </div>
-        </div>
-    </div>
-    <footer>
-        <p>Crée par <a href="https://github.com/Zalgow667/TD1_LEPLEY_LEBLAY_HAMON_EPPELE_IW/tree/v1" target="_blank" id="mon_github">Squid Game</a> - 2023</p>
-    </footer>   
+    <script src="./scripts/setup.js"></script>
     <script type="module" src="./scripts/app.js"></script>
 </body>
 </html>
