--- a/index.html
+++ b/index.html
@@ -31,16 +31,10 @@
                 </div>
             </div>
             <div class="days-forecast">
-                <h2>1 - Day Forecast</h2>
-                <ul class="weather-cards">
-                  <li class="card">
-                    <h3><span id="actual-date2"></span></h3>
-                    <h4>Temp: __C</h4>
-                    <h4>Wind: __ M/S</h4>
-                    <h4>Humidity: __%</h4>
-                  </li>
-                </ul>
+                <h2 id="title-day-forecast">1 - Day Forecast</h2>
+                <ul id="weather-cards"></ul>
             </div>
+            <input id="number-of-weather-card" type="number" placeholder="Entrer un nb de jour" aria-label="zip-search" max="7">
         </div>
     </div>
     <footer>
