v2 manque la class

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                 </div>
             </div>
             <div class="days-forecast">
-                <h2 id="title-day-forecast">1 - Day Forecast</h2>
+                <h2 id="title-day-forecast"><span id="number-day-display">0</span> - Day Forecast</h2>
                 <ul id="weather-cards"></ul>
             </div>
-            <input id="number-of-weather-card" type="number" placeholder="Entrer un nb de jour" aria-label="zip-search" max="7">
+            <input id="number-of-weather-card" type="number" placeholder="Entrer un nb de jour" aria-label="zip-search" min="0" max="7">
         </div>
     </div>
     <footer>
