--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
         <div class="weather-data">
             <div class="current-weather">
                 <div class="details">
-                    <h2><span id="city-location">______</span> - <span id="actual-date"></span></h2>
+                    <h2><span id="city-location">______</span> - <span id="insee-code">00000</span> - <span id="actual-date"></span></h2>
                     <h3>Temperature max: <span id="city-temperature-max">__</span>°C</h3>
                     <h3>Temperature min: <span id="city-temperature-min">__</span>°C</h3>
                     <h3>Rain probability: <span id="city-rain-probability">__</span>%</h3>
                     <h3>Sun time: <span id="city-sun-time">__</span> hours</h3>
                     <h4>You want to display more day ?</h4>
+                    <input id="number-of-weather-card" aria-label="number-day-range" name="number-day-range" type="range" step="1" value="0" min="0" max="7">
                 </div>
                 <div class="icon">
                     <img src="https://openweathermap.org/img/wn/10d@4x.png" alt="weather-icon">
@@ -34,7 +35,6 @@
                 <h2 id="title-day-forecast"><span id="number-day-display">0</span> - Day Forecast</h2>
                 <ul id="weather-cards"></ul>
             </div>
-            <input id="number-of-weather-card" type="number" placeholder="Entrer un nb de jour" aria-label="zip-search" min="0" max="7">
         </div>
     </div>
     <footer>
