ajout de la bonne date au carte

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="weather-data">
             <div class="current-weather">
                 <div class="details">
-                    <h2><span id="city-location">______</span> - <span id="insee-code">00000</span> - <span id="actual-date"></span></h2>
+                    <h2><span id="city-location">______</span> - <span id="insee-code">_____</span> - <span id="actual-date"></span></h2>
                     <h3>Temperature max: <span id="city-temperature-max">__</span>°C</h3>
                     <h3>Temperature min: <span id="city-temperature-min">__</span>°C</h3>
                     <h3>Rain probability: <span id="city-rain-probability">__</span>%</h3>
