--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <div class="current-weather">
                 <div class="details">
                     <h2><span id="city-location">______</span> - <span id="insee-code">_____</span> - <span id="actual-date"></span></h2>
-                    <h3>Temperature max: <span id="city-temperature-max">__</span>°C</h3>
-                    <h3>Temperature min: <span id="city-temperature-min">__</span>°C</h3>
+                    <h3>Temp max: <span id="city-temperature-max">__</span>°C</h3>
+                    <h3>Temp min: <span id="city-temperature-min">__</span>°C</h3>
                     <h3>Rain probability: <span id="city-rain-probability">__</span>%</h3>
                     <h3>Sun time: <span id="city-sun-time">__</span> hours</h3>
                     <h4>You want to display more day ?</h4>
