add icons and icon management

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                     <input id="number-of-weather-card" aria-label="number-day-range" name="number-day-range" type="range" step="1" value="0" min="0" max="7">
                 </div>
                 <div class="icon">
-                    <img src="https://openweathermap.org/img/wn/10d@4x.png" alt="weather-icon">
-                    <h4 id="weather-info-text">_____________</h4>
+                    <img id="weather-info-icon" src="./images/icones/icons8-clouds-with-glass-64.png" alt="weather icone">
+                    <h4 id="weather-info-text"></h4>
                 </div>
             </div>
             <div class="days-forecast">
