management image finit

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </div>
                 <div class="icon">
                     <img id="weather-info-icon" src="./images/icones/icons8-clouds-with-glass-64.png" alt="weather icone">
-                    <h4 id="weather-info-text"></h4>
+                    <h4 id="weather-info-text">__________</h4>
                 </div>
             </div>
             <div class="days-forecast">
