--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 
 
                 <div class="icon">
-                    <img src="https://openweathermap.org/img/wn/10d@4x.png" alt="weather-icon">
+                    <img id="weather-info-icone" src="https://openweathermap.org/img/wn/10d@4x.png" alt="weather-icon">
                     <h4 id="weather-info-text">_____________</h4>
                 </div>
             </div>
