ajout du management de l'image

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                 
 
                 <div class="icon">
-                    <img id="weather-info-icone" src="https://openweathermap.org/img/wn/10d@4x.png" alt="weather-icon">
-                    <h4 id="weather-info-text">_____________</h4>
+                    <img id="weather-info-icon" src="./images/icones/icons8-clouds-with-glass-64.png" alt="weather icone">
+                    <h4 id="weather-info-text"></h4>
                 </div>
             </div>
             <div class="days-forecast">
