v2 finit, manque le readme

--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     <h1 id="title">Weather Dashbord</h1>
     <div class="container">
         <div class="weather-input">
-            <label name="zip-search">Enter a City Name</label>
+            <label name="zip-search">Enter a ZIP Code</label>
             <input id="zip-code-input" type="text" placeholder="Entrer un code postale" aria-label="zip-search" maxlength="5">
             <div id="result"></div>
         </div>
         <div class="weather-data">
             <div class="current-weather">
                 <div class="details">
-                    <h2><span id="city-location">______</span> - <span id="insee-code">_____</span> - <span id="actual-date"></span></h2>
-                    <h3>Temp max: <span id="city-temperature-max">__</span>°C</h3>
-                    <h3>Temp min: <span id="city-temperature-min">__</span>°C</h3>
-                    <h3>Rain probability: <span id="city-rain-probability">__</span>%</h3>
-                    <h3>Sun time: <span id="city-sun-time">__</span> hours</h3>
+                    <h2><span id="city-location"></span><span id="insee-code"></span><span id="actual-date"></span></h2>
+                    <h3>Temp max: <span id="city-temperature-max"></span>°C</h3>
+                    <h3>Temp min: <span id="city-temperature-min"></span>°C</h3>
+                    <h3>Rain proba: <span id="city-rain-probability"></span>%</h3>
+                    <h3>Sun time: <span id="city-sun-time"></span> hours</h3>
                     <button id="openBtn">Display more day</button>    
                 </div>
 
@@ -67,8 +67,8 @@
             </div>
         </div>
     </div>
-    <footer>
-        <p>Crée par <a href="https://github.com/Zalgow667/TD1_LEPLEY_LEBLAY_HAMON_EPPELE_IW/tree/v1" target="_blank" id="mon_github">Squid Game</a> - 2023</p>
+    <footer id="footer-instant-weather">
+        <p>Crée par <a href="https://github.com/Zalgow667/TD1_LEPLEY_LEBLAY_HAMON_EPPELE_IW" target="_blank" id="mon_github">Squid Game</a> - 2023</p>
     </footer>   
     <script type="module" src="./scripts/app.js"></script>
 </body>
