--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <h1 id="title">Weather Dashbord</h1>
     <div class="container">
         <div class="weather-input">
-            <label name="zip-search">Enter a ZIP Code</label>
+            <label aria-label="zip-search">Enter a ZIP Code</label>
             <input id="zip-code-input" type="text" placeholder="Entrer un code postale" aria-label="zip-search" maxlength="5">
             <div id="result"></div>
         </div>
         <div class="weather-data">
             <div class="current-weather">
                 <div class="details">
-                    <h2><span id="city-location"></span><span id="insee-code"></span><span id="actual-date"></span></h2>
+                    <h2><span id="city-location">? -</span><span id="insee-code"></span><span id="actual-date"></span></h2>
                     <h3>Temp max: <span id="city-temperature-max"></span>°C</h3>
                     <h3>Temp min: <span id="city-temperature-min"></span>°C</h3>
                     <h3>Rain proba: <span id="city-rain-probability"></span>%</h3>
@@ -28,28 +28,29 @@
 
                 <dialog id="modal">
                     <h1 id="modalTitle">Display option settings</h1>
-                        <label>
-                            <input type="checkbox" id="showLatitude"> - Latitude décimale de la commune
-                        </label>
+                    <label>
+                        <input type="checkbox" id="showLatitude"> - Decimal Latitude of the Municipality
+                    </label>
                     <br>
-                        <label>
-                            <input type="checkbox" id="showLongitude"> - Longitude décimale de la commune
-                        </label>
+                    <label>
+                        <input type="checkbox" id="showLongitude"> - Decimal Longitude of the Municipality
+                    </label>
                     <br>
-                        <label>
-                            <input type="checkbox" id="showRain"> - Cumul de pluie sur la journée en mm
-                        </label>
+                    <label>
+                        <input type="checkbox" id="showRain"> - Rainfall Accumulation for the Day in mm
+                    </label>
                     <br>
-                        <label>
-                            <input type="checkbox" id="showWindSpeed"> - Vent moyen à 10 mètres en km/h
-                        </label>
+                    <label>
+                        <input type="checkbox" id="showWindSpeed"> - Average Wind at 10 Meters in km/h
+                    </label>
                     <br>
-                        <label>
-                            <input type="checkbox" id="showWindDirection"> - Direction du vent en degrés (0 à 360°)
-                        </label>
+                    <label>
+                        <input type="checkbox" id="showWindDirection"> - Wind Direction in Degrees (0 to 360°)
+                    </label>
                     <br>
                     
-                    <label aria-label="display-number-day-range">Nombre de jour : <span id="value-input-range">0</span></label>
+                    
+                    <label aria-label="display-number-day-range">Number of days : <span id="value-input-range">0</span></label>
                     <input id="number-of-weather-card" aria-label="number-day-range" name="number-day-range" type="range" step="1" value="0" min="0" max="7">
                     <button id="sendBtn">Send settings</button>
                     <button id="closeBtn">Close settings</button>
@@ -58,7 +59,7 @@
 
                 <div class="icon">
                     <img id="weather-info-icon" src="./images/icones/icons8-clouds-with-glass-64.png" alt="weather icone">
-                    <h4 id="weather-info-text"></h4>
+                    <h4 id="weather-info-text">Waiting research...</h4>
                 </div>
             </div>
             <div class="days-forecast">
